style(standalone/setup): fix some spacing issues

--- a/apps/client/src/setup.css
+++ b/apps/client/src/setup.css
@@ -109,8 +109,13 @@ body.setup {
             flex-direction: column;
             justify-content: center;
             flex-grow: 1;
+            gap: 1rem;
             width: 80%;
             margin: auto;
+
+            .form-group {
+                margin-bottom: 0;
+            }
 
             .admonition {
                 margin: 0;
